--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -110,7 +110,7 @@ iframe {
 .header {
   padding: 30px 0;
   background: #f5f5f5;
-  /*border-top: 10px solid #778492;*/
+  border-top: 5px solid #778492;
 }
 .header .btn {
   margin-top: 60px;
@@ -166,7 +166,7 @@ iframe {
 }
 .section .section-inner {
   background: #fff;
-  padding: 30px;
+  padding: 3px;
 }
 .section .heading {
   margin-top: 0;
